# gitpeek

./: .gitignore  LICENSE  README.md  pyproject.toml
gitpeek/: __init__.py  __main__.py  cli.py  diff.py  git.py  ui.py
tests/: test_diff.py  test_git.py  test_ui.py
